added pose recognition example

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -25,6 +25,9 @@
     <a href="{{ site.baseurl }}/face_tracking" {% if page.dir == "/face_tracking/" %}class="selected" {% endif %}>
       Face Tracking</a>
 
+    <a href="{{ site.baseurl }}/pose_recognition" {% if page.dir == "/pose_recognition/" %}class="selected" {% endif %}>
+      Pose Recognition</a>
+
 
   </div>
 
