--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -28,6 +28,10 @@
     <a href="{{ site.baseurl }}/pose_recognition" {% if page.dir == "/pose_recognition/" %}class="selected" {% endif %}>
       Pose Recognition</a>
 
+    <a href="{{ site.baseurl }}/hello_api" {% if page.dir == "/hello_api/" %}class="selected" {% endif %}>
+      Hello API!</a>
+
+
 
   </div>
 
